Add participant list for Aeropuerto de Rosario event and adjust text alignment

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         margin: 0;
         background: linear-gradient(135deg, black, grey);
         color: #fff;
-        text-align: center;
+        text-align: center; /* Center all text */
       }
 
       h1 {
@@ -24,7 +24,7 @@
         text-transform: uppercase;
         letter-spacing: 2px;
         word-wrap: break-word; /* Allow long words to break */
-        text-align: center; /* Ensure the text is centered */
+        text-align: center; /* Center header text */
         max-width: 90%; /* Limit the width to prevent overflow */
       }
 
@@ -56,7 +56,11 @@
         letter-spacing: 1px;
       }
 
-    
+      ul {
+        list-style-type: none; /* Remove bullet points */
+        padding: 0; /* Remove default padding */
+        text-align: left; /* Align list content to the left */
+      }
     </style>
   </head>
   <body>
@@ -83,7 +87,22 @@
       <div id="countdown"></div>
     </div>
     <h2>16/11/2025 02:55 -  Aeropuerto de Rosario</h2>
-
+    <ul>
+      <li>1. Chemes Salim</li>
+      <li>2. Cossy Leonardo</li>
+      <li>3. Ferrer Facundo</li>
+      <li>4. Guinle Martin</li>
+      <li>5. Minni Joaquin</li>
+      <li>6. Mistura Juan</li>
+      <li>7. Ramirez Montrul Juan Manuel</li>
+      <li>8. Rios Julian</li>
+      <li>9. Rodriguez Juan Manuel</li>
+      <li>10. Sampayo Nicolas</li>
+      <li>11. Sarmiento Ignacio</li>
+      <li>12. Tarzia Nicolas</li>
+      <li>13. Taffarel Facundo</li>
+      <li>14. Uranga Ramiro</li>
+    </ul>
     <script src="script.js"></script>
   </body>
 </html>
