--- a/index.html
+++ b/index.html
@@ -97,11 +97,12 @@
       <li>7. Ramirez Montrul Juan Manuel</li>
       <li>8. Rios Julian</li>
       <li>9. Rodriguez Juan Manuel</li>
-      <li>10. Sampayo Nicolas</li>
-      <li>11. Sarmiento Ignacio</li>
-      <li>12. Tarzia Nicolas</li>
-      <li>13. Taffarel Facundo</li>
-      <li>14. Uranga Ramiro</li>
+      <li>9. Romero Alfredo</li>
+      <li>11. Sampayo Nicolas</li>
+      <li>12. Sarmiento Ignacio</li>
+      <li>13. Tarzia Nicolas</li>
+      <li>14. Taffarel Facundo</li>
+      <li>15. Uranga Ramiro</li>
     </ul>
     <script src="script.js"></script>
   </body>
