--- a/index.html
+++ b/index.html
@@ -89,20 +89,21 @@
     <h2>16/11/2025 02:55 -  Aeropuerto de Rosario</h2>
     <ul>
       <li>1. Chemes Salim</li>
-      <li>2. Cossy Leonardo</li>
-      <li>3. Ferrer Facundo</li>
-      <li>4. Guinle Martin</li>
-      <li>5. Minni Joaquin</li>
-      <li>6. Mistura Juan</li>
-      <li>7. Ramirez Montrul Juan Manuel</li>
-      <li>8. Rios Julian</li>
-      <li>9. Rodriguez Juan Manuel</li>
-      <li>9. Romero Alfredo</li>
-      <li>11. Sampayo Nicolas</li>
-      <li>12. Sarmiento Ignacio</li>
-      <li>13. Tarzia Nicolas</li>
-      <li>14. Taffarel Facundo</li>
-      <li>15. Uranga Ramiro</li>
+      <li>2. Cornejo Juan Manuel</li>
+      <li>3. Cossy Leonardo</li>
+      <li>4. Ferrer Facundo</li>
+      <li>5. Guinle Martin</li>
+      <li>6. Minni Joaquin</li>
+      <li>7. Mistura Juan</li>
+      <li>8. Ramirez Montrul Juan Manuel</li>
+      <li>9. Rios Julian</li>
+      <li>10. Rodriguez Juan Manuel</li>
+      <li>11. Romero Alfredo</li>
+      <li>12. Sampayo Nicolas</li>
+      <li>13. Sarmiento Ignacio</li>
+      <li>14. Tarzia Nicolas</li>
+      <li>15. Taffarel Facundo</li>
+      <li>16. Uranga Ramiro</li>
     </ul>
     <script src="script.js"></script>
   </body>
