--- a/index.html
+++ b/index.html
@@ -92,19 +92,20 @@
       <li>2. Cornejo Juan Manuel</li>
       <li>3. Cossy Leonardo</li>
       <li>4. Ferrer Facundo</li>
-      <li>5. Guinle Martin</li>
-      <li>6. Minni Joaquin</li>
-      <li>7. Mistura Juan</li>
-      <li>8. Ramirez Montrul Juan Manuel</li>
-      <li>9. Rios Julian</li>
-      <li>10. Rodriguez Juan Manuel</li>
-      <li>11. Romero Alfredo</li>
-      <li>12. Sampayo Nicolas</li>
-      <li>13. Sarmiento Ignacio</li>
-      <li>14. Scheifler Cristian</li>
-      <li>15. Taffarel Facundo</li>
-      <li>16. Tarzia Nicolas</li>
-      <li>17. Uranga Ramiro</li>
+      <li>5. Gregorutti Pablo</li>
+      <li>6. Guinle Martin</li>
+      <li>7. Minni Joaquin</li>
+      <li>8. Mistura Juan</li>
+      <li>9. Ramirez Montrul Juan Manuel</li>
+      <li>10. Rios Julian</li>
+      <li>11. Rodriguez Juan Manuel</li>
+      <li>12. Romero Alfredo</li>
+      <li>13. Sampayo Nicolas</li>
+      <li>14. Sarmiento Ignacio</li>
+      <li>15. Scheifler Cristian</li>
+      <li>16. Taffarel Facundo</li>
+      <li>17. Tarzia Nicolas</li>
+      <li>18. Uranga Ramiro</li>
     </ul>
     <script src="script.js"></script>
   </body>
