--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
         padding: 5px 0;
       }
 
+      .secretary {
+        background: linear-gradient(135deg, #4a90e2, #67b5ff);
+        color: #fff;
+        font-weight: bold;
+        padding: 10px 15px;
+        border-radius: 8px;
+        margin: 5px 0;
+        box-shadow: 0 4px 15px rgba(74, 144, 226, 0.5);
+      }
+
       .modal {
         display: flex;
         position: fixed;
@@ -208,7 +218,7 @@
     </div>
     <h2>16/11/2025 02:55 -  Aeropuerto de Rosario</h2>
     <ul>
-      <li class="leader">1. Chemes Salim 👑</li>
+      <li class="leader">1. Chemes Salim 👑 (Lider)</li>
       <li>2. Cornejo Juan Manuel</li>
       <li>3. Cossy Leonardo</li>
       <li>4. Ferrer Facundo</li>
@@ -221,7 +231,7 @@
       <li>11. Rodriguez Juan Manuel</li>
       <li>12. Romero Alfredo</li>
       <li>13. Sampayo Nicolas</li>
-      <li>14. Sarmiento Ignacio</li>
+      <li class="secretary">14. Sarmiento Ignacio 📋 (Secretario)</li>
       <li>15. Scheifler Cristian</li>
       <li>16. Taffarel Facundo</li>
       <li>17. Tarzia Nicolas</li>
