Refactor CSS for better layout: adjust flex properties and add overflow handling

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
         font-family: "Arial", sans-serif;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
-        height: 100vh;
+        min-height: 100vh;
         margin: 0;
+        padding: 20px 10px;
         background: linear-gradient(135deg, black, grey);
         color: #fff;
         text-align: center; /* Center all text */
+        overflow-y: auto;
       }
 
       h1 {
